@@ -1,88 +1,85 @@
 package com.sikhshan.restcontroller;
 
-import java.io.File;
-import java.io.IOException;
-import java.nio.file.Files;
-import java.nio.file.Path;
-import java.nio.file.Paths;
-import java.time.LocalDate;
-import java.util.List;
-import java.util.Optional;
-import java.util.stream.Collectors;
-
+import com.sikhshan.dto.CourseRequest;
+import com.sikhshan.dto.CourseResponse;
+import com.sikhshan.model.Course;
+import com.sikhshan.model.Enrollment;
+import com.sikhshan.model.User;
+import com.sikhshan.repository.CourseRepository;
+import com.sikhshan.repository.EnrollmentRepository;
+import com.sikhshan.repository.UserRepository;
+import com.sikhshan.service.CloudinaryService;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.http.ResponseEntity;
 import org.springframework.web.bind.annotation.*;
 import org.springframework.web.multipart.MultipartFile;
 
-import com.sikhshan.dto.CourseRequest;
-import com.sikhshan.dto.CourseResponse;
-import com.sikhshan.model.Course;
-import com.sikhshan.model.User;
-import com.sikhshan.model.Enrollment;
-import com.sikhshan.repository.CourseRepository;
-import com.sikhshan.repository.UserRepository;
-import com.sikhshan.repository.EnrollmentRepository;
+import java.io.IOException;
+import java.time.LocalDate;
+import java.util.List;
+import java.util.Map;
+import java.util.Optional;
+import java.util.stream.Collectors;
 
 @RestController
 @RequestMapping("/api/courses")
 public class CourseController {
-
 	@Autowired
 	private CourseRepository courseRepository;
-
+	
 	@Autowired
 	private UserRepository userRepository;
-
+	
 	@Autowired
 	private EnrollmentRepository enrollmentRepository;
+	
+	@Autowired
+	private CloudinaryService cloudinaryService;
 
 	private CourseResponse toResponse(Course course) {
-		CourseResponse resp = new CourseResponse();
-		resp.setId(course.getId());
-		resp.setName(course.getName());
-		resp.setCode(course.getCode());
-		resp.setDescription(course.getDescription());
-		resp.setCategory(course.getCategory());
+		CourseResponse response = new CourseResponse();
+		response.setId(course.getId());
+		response.setName(course.getName());
+		response.setCode(course.getCode());
+		response.setDescription(course.getDescription());
+		response.setCategory(course.getCategory());
+		response.setStartDate(course.getStartDate());
+		response.setEndDate(course.getEndDate());
+		response.setCredits(course.getCredits());
+		response.setImageUrl(course.getImageUrl());
+		response.setStatus(course.getStatus());
+		response.setCreatedAt(course.getCreatedAt());
+		
 		if (course.getInstructor() != null) {
-			resp.setInstructorId(course.getInstructor().getId());
-			resp.setInstructor(course.getInstructor().getName());
+			response.setInstructorId(course.getInstructor().getId());
+			response.setInstructor(course.getInstructor().getName());
+			response.setInstructorProfilePictureUrl(course.getInstructor().getCloudinaryUrl());
 		}
-		resp.setStartDate(course.getStartDate());
-		resp.setEndDate(course.getEndDate());
-		resp.setCredits(course.getCredits());
-		resp.setImageUrl(course.getImageUrl());
-		resp.setStatus(course.getStatus());
-		resp.setCreatedAt(course.getCreatedAt());
-		return resp;
+		
+		return response;
 	}
 
-	// Create Course
 	@PostMapping
 	public ResponseEntity<?> createCourse(@RequestBody CourseRequest courseRequest) {
 		Optional<User> instructorOpt = userRepository.findById(courseRequest.getInstructorId());
-		if (instructorOpt.isEmpty() || !instructorOpt.get().getRole().name().equalsIgnoreCase("faculty")) {
-			return ResponseEntity.badRequest().body("Instructor must be a valid faculty user");
+		if (instructorOpt.isEmpty()) {
+			return ResponseEntity.badRequest().body("Instructor not found");
 		}
-
 		Course course = new Course();
 		course.setName(courseRequest.getName());
 		course.setCode(courseRequest.getCode());
 		course.setDescription(courseRequest.getDescription());
 		course.setCategory(courseRequest.getCategory());
-		course.setInstructor(instructorOpt.get());
 		course.setStartDate(courseRequest.getStartDate());
 		course.setEndDate(courseRequest.getEndDate());
 		course.setCredits(courseRequest.getCredits());
-		course.setImageUrl(courseRequest.getImageUrl());
 		course.setStatus(courseRequest.getStatus());
 		course.setCreatedAt(LocalDate.now());
-
-		Course savedCourse = courseRepository.save(course);
-		return ResponseEntity.ok(toResponse(savedCourse));
+		course.setInstructor(instructorOpt.get());
+		courseRepository.save(course);
+		return ResponseEntity.ok(toResponse(course));
 	}
 
-	// List All Courses
 	@GetMapping
 	public ResponseEntity<List<CourseResponse>> getAllCourses() {
 		List<Course> courses = courseRepository.findAll();
@@ -90,7 +87,6 @@ public class CourseController {
 		return ResponseEntity.ok(responses);
 	}
 
-	// List Courses by Instructor
 	@GetMapping("/instructor/{instructorId}")
 	public ResponseEntity<List<CourseResponse>> getCoursesByInstructor(@PathVariable Long instructorId) {
 		List<Course> courses = courseRepository.findByInstructorId(instructorId);
@@ -98,7 +94,6 @@ public class CourseController {
 		return ResponseEntity.ok(responses);
 	}
 
-	// List Courses by Student
 	@GetMapping("/student/{studentId}")
 	public ResponseEntity<List<CourseResponse>> getCoursesByStudent(@PathVariable Long studentId) {
 		List<Course> courses = courseRepository.findByEnrollmentsStudentId(studentId);
@@ -106,128 +101,163 @@ public class CourseController {
 		return ResponseEntity.ok(responses);
 	}
 
-	// Get Course by ID
 	@GetMapping("/{id}")
 	public ResponseEntity<?> getCourseById(@PathVariable Long id) {
 		Optional<Course> courseOpt = courseRepository.findById(id);
-		if (courseOpt.isPresent()) {
-			return ResponseEntity.ok(toResponse(courseOpt.get()));
-		} else {
-			return ResponseEntity.status(404).body("Course not found with id: " + id);
+		if (courseOpt.isEmpty()) {
+			return ResponseEntity.notFound().build();
 		}
+		return ResponseEntity.ok(toResponse(courseOpt.get()));
 	}
 
-	// Update Course
 	@PutMapping("/{id}")
 	public ResponseEntity<?> updateCourse(@PathVariable Long id, @RequestBody CourseRequest courseRequest) {
 		Optional<Course> courseOpt = courseRepository.findById(id);
 		if (courseOpt.isEmpty()) {
-			return ResponseEntity.status(404).body("Course not found with id: " + id);
+			return ResponseEntity.notFound().build();
 		}
-
 		Optional<User> instructorOpt = userRepository.findById(courseRequest.getInstructorId());
-		if (instructorOpt.isEmpty() || !instructorOpt.get().getRole().name().equalsIgnoreCase("faculty")) {
-			return ResponseEntity.badRequest().body("Instructor must be a valid faculty user");
+		if (instructorOpt.isEmpty()) {
+			return ResponseEntity.badRequest().body("Instructor not found");
 		}
-
 		Course course = courseOpt.get();
 		course.setName(courseRequest.getName());
 		course.setCode(courseRequest.getCode());
 		course.setDescription(courseRequest.getDescription());
 		course.setCategory(courseRequest.getCategory());
-		course.setInstructor(instructorOpt.get());
 		course.setStartDate(courseRequest.getStartDate());
 		course.setEndDate(courseRequest.getEndDate());
 		course.setCredits(courseRequest.getCredits());
-		course.setImageUrl(courseRequest.getImageUrl());
 		course.setStatus(courseRequest.getStatus());
-
-		Course savedCourse = courseRepository.save(course);
-		return ResponseEntity.ok(toResponse(savedCourse));
+		course.setInstructor(instructorOpt.get());
+		courseRepository.save(course);
+		return ResponseEntity.ok(toResponse(course));
 	}
 
-	// Delete Course
 	@DeleteMapping("/{id}")
 	public ResponseEntity<?> deleteCourse(@PathVariable Long id) {
 		Optional<Course> courseOpt = courseRepository.findById(id);
-		if (courseOpt.isPresent()) {
-			courseRepository.deleteById(id);
-			return ResponseEntity.ok("Course deleted successfully");
-		} else {
-			return ResponseEntity.status(404).body("Course not found with id: " + id);
+		if (courseOpt.isEmpty()) {
+			return ResponseEntity.notFound().build();
 		}
+		Course course = courseOpt.get();
+		
+		// Delete course image from Cloudinary if exists
+		if (course.getCloudinaryPublicId() != null && !course.getCloudinaryPublicId().isEmpty()) {
+			try {
+				cloudinaryService.deleteFile(course.getCloudinaryPublicId());
+			} catch (IOException e) {
+				// Log error but continue with deletion
+				System.err.println("Failed to delete course image from Cloudinary: " + e.getMessage());
+			}
+		}
+		
+		// Delete related enrollments first to avoid foreign key constraint
+		List<Enrollment> enrollments = enrollmentRepository.findByCourseId(id);
+		enrollmentRepository.deleteAll(enrollments);
+		
+		courseRepository.delete(course);
+		return ResponseEntity.ok().build();
 	}
 
-	// List Available Courses for a Student (not enrolled)
 	@GetMapping("/available/{studentId}")
 	public ResponseEntity<List<CourseResponse>> getAvailableCoursesForStudent(@PathVariable Long studentId) {
-		List<Long> enrolledCourseIds = enrollmentRepository.findByStudentId(studentId)
-			.stream().map(e -> e.getCourse().getId()).toList();
-		List<Course> availableCourses;
-		if (enrolledCourseIds.isEmpty()) {
-			availableCourses = courseRepository.findAll();
-		} else {
-			availableCourses = courseRepository.findByIdNotIn(enrolledCourseIds);
-		}
-		List<CourseResponse> responses = availableCourses.stream().map(this::toResponse).toList();
+		List<Course> allCourses = courseRepository.findAll();
+		List<Course> enrolledCourses = courseRepository.findByEnrollmentsStudentId(studentId);
+		List<Long> enrolledCourseIds = enrolledCourses.stream().map(Course::getId).collect(Collectors.toList());
+		List<Course> availableCourses = allCourses.stream()
+				.filter(course -> !enrolledCourseIds.contains(course.getId()))
+				.collect(Collectors.toList());
+		List<CourseResponse> responses = availableCourses.stream().map(this::toResponse).collect(Collectors.toList());
 		return ResponseEntity.ok(responses);
 	}
 
-	// Enroll Student in Course
 	@PostMapping("/{courseId}/enroll")
 	public ResponseEntity<?> enrollStudentInCourse(@PathVariable Long courseId, @RequestBody EnrollmentRequest enrollmentRequest) {
-		Optional<Course> courseOpt = courseRepository.findById(courseId);
-		if (courseOpt.isEmpty()) {
-			return ResponseEntity.status(404).body("Course not found");
+		try {
+			Optional<Course> courseOpt = courseRepository.findById(courseId);
+			if (courseOpt.isEmpty()) {
+				return ResponseEntity.status(404).body("Course not found");
+			}
+			Optional<User> studentOpt = userRepository.findById(enrollmentRequest.getStudentId());
+			if (studentOpt.isEmpty()) {
+				return ResponseEntity.status(404).body("Student not found");
+			}
+			Optional<Enrollment> existingEnrollment = enrollmentRepository.findByStudentIdAndCourseId(enrollmentRequest.getStudentId(), courseId);
+			if (existingEnrollment.isPresent()) {
+				return ResponseEntity.status(400).body("Student is already enrolled in this course");
+			}
+			Enrollment enrollment = new Enrollment();
+			enrollment.setStudent(studentOpt.get());
+			enrollment.setCourse(courseOpt.get());
+			enrollment.setEnrollmentDate(LocalDate.now());
+			enrollment.setStatus("ACTIVE");
+			enrollmentRepository.save(enrollment);
+			return ResponseEntity.ok("Student enrolled successfully");
+		} catch (Exception e) {
+			e.printStackTrace();
+			return ResponseEntity.status(500).body("Internal server error: " + e.getMessage());
 		}
-
-		Optional<User> studentOpt = userRepository.findById(enrollmentRequest.getStudentId());
-		if (studentOpt.isEmpty() || !studentOpt.get().getRole().name().equalsIgnoreCase("student")) {
-			return ResponseEntity.badRequest().body("Student must be a valid student user");
-		}
-
-		// Check if already enrolled
-		Optional<Enrollment> existingEnrollment = enrollmentRepository.findByStudentIdAndCourseId(
-			enrollmentRequest.getStudentId(), courseId);
-		if (existingEnrollment.isPresent()) {
-			return ResponseEntity.badRequest().body("Student is already enrolled in this course");
-		}
-
-		Enrollment enrollment = new Enrollment();
-		enrollment.setStudent(studentOpt.get());
-		enrollment.setCourse(courseOpt.get());
-		enrollment.setEnrollmentDate(LocalDate.now());
-		enrollment.setStatus("ACTIVE");
-
-		enrollmentRepository.save(enrollment);
-		return ResponseEntity.ok("Student enrolled successfully");
 	}
 
-	// Unenroll Student from Course
 	@DeleteMapping("/{courseId}/unenroll")
 	public ResponseEntity<?> unenrollStudentFromCourse(@PathVariable Long courseId, @RequestParam Long studentId) {
-		Optional<Enrollment> enrollmentOpt = enrollmentRepository.findByStudentIdAndCourseId(studentId, courseId);
-		if (enrollmentOpt.isEmpty()) {
-			return ResponseEntity.status(404).body("Enrollment not found");
+		try {
+			Optional<Enrollment> enrollmentOpt = enrollmentRepository.findByStudentIdAndCourseId(studentId, courseId);
+			if (enrollmentOpt.isEmpty()) {
+				return ResponseEntity.status(404).body("Enrollment not found");
+			}
+			enrollmentRepository.delete(enrollmentOpt.get());
+			return ResponseEntity.ok("Student unenrolled successfully");
+		} catch (Exception e) {
+			e.printStackTrace();
+			return ResponseEntity.status(500).body("Internal server error: " + e.getMessage());
 		}
-
-		enrollmentRepository.delete(enrollmentOpt.get());
-		return ResponseEntity.ok("Student unenrolled successfully");
 	}
 
-	// Get Students enrolled in a Course
 	@GetMapping("/{courseId}/students")
-	public ResponseEntity<List<StudentResponse>> getStudentsInCourse(@PathVariable Long courseId) {
-		Optional<Course> courseOpt = courseRepository.findById(courseId);
-		if (courseOpt.isEmpty()) {
-			return ResponseEntity.status(404).body("Course not found");
+	public ResponseEntity<?> getStudentsInCourse(@PathVariable Long courseId) {
+		try {
+			Optional<Course> courseOpt = courseRepository.findById(courseId);
+			if (courseOpt.isEmpty()) {
+				return ResponseEntity.status(404).body("Course not found");
+			}
+			List<Enrollment> enrollments = enrollmentRepository.findByCourseId(courseId);
+			List<StudentResponse> students = enrollments.stream()
+					.map(this::toStudentResponse)
+					.collect(Collectors.toList());
+			return ResponseEntity.ok(students);
+		} catch (Exception e) {
+			e.printStackTrace();
+			return ResponseEntity.status(500).body("Internal server error: " + e.getMessage());
 		}
+	}
 
-		List<Enrollment> enrollments = enrollmentRepository.findByCourseId(courseId);
-		List<StudentResponse> students = enrollments.stream()
-			.map(this::toStudentResponse)
-			.collect(Collectors.toList());
-		return ResponseEntity.ok(students);
+	// Debug endpoint to test enrollment repository
+	@GetMapping("/{courseId}/students/debug")
+	public ResponseEntity<?> debugStudentsInCourse(@PathVariable Long courseId) {
+		try {
+			Optional<Course> courseOpt = courseRepository.findById(courseId);
+			if (courseOpt.isEmpty()) {
+				return ResponseEntity.status(404).body("Course not found");
+			}
+
+			List<Enrollment> enrollments = enrollmentRepository.findByCourseId(courseId);
+			return ResponseEntity.ok(Map.of(
+				"courseId", courseId,
+				"enrollmentCount", enrollments.size(),
+				"enrollments", enrollments.stream().map(e -> Map.of(
+					"id", e.getId(),
+					"studentId", e.getStudent() != null ? e.getStudent().getId() : "null",
+					"studentName", e.getStudent() != null ? e.getStudent().getName() : "null",
+					"enrollmentDate", e.getEnrollmentDate(),
+					"status", e.getStatus()
+				)).collect(Collectors.toList())
+			));
+		} catch (Exception e) {
+			e.printStackTrace();
+			return ResponseEntity.status(500).body("Debug error: " + e.getMessage());
+		}
 	}
 
 	// Upload course image by ID
@@ -238,27 +268,43 @@ public class CourseController {
 			return ResponseEntity.status(404).body("Course not found with id: " + id);
 		}
 		Course course = courseOpt.get();
-		String uploadDir = "uploads/course-images/";
-		File dir = new File(uploadDir);
-		if (!dir.exists()) dir.mkdirs();
-		String filename = course.getCode().replaceAll("[^a-zA-Z0-9]", "_") + "_" + System.currentTimeMillis() + "_" + file.getOriginalFilename();
-		Path filepath = Paths.get(uploadDir, filename);
+		
 		try {
-			Files.write(filepath, file.getBytes());
-			course.setImageUrl("/" + uploadDir + filename);
+			// Delete old course image from Cloudinary if exists
+			if (course.getCloudinaryPublicId() != null && !course.getCloudinaryPublicId().isEmpty()) {
+				try {
+					cloudinaryService.deleteFile(course.getCloudinaryPublicId());
+				} catch (IOException e) {
+					// Log error but continue with upload
+					System.err.println("Failed to delete old course image: " + e.getMessage());
+				}
+			}
+			
+			// Upload new course image to Cloudinary
+			Map<String, Object> uploadResult = cloudinaryService.uploadCourseImage(file, course.getId());
+			
+			// Update course with Cloudinary information
+			course.setCloudinaryPublicId((String) uploadResult.get("public_id"));
+			course.setCloudinaryUrl((String) uploadResult.get("secure_url"));
+			course.setImageUrl((String) uploadResult.get("secure_url"));
+			
 			courseRepository.save(course);
 			return ResponseEntity.ok(toResponse(course));
+			
 		} catch (IOException e) {
-			return ResponseEntity.status(500).body("Failed to upload image");
+			return ResponseEntity.status(500).body("Failed to upload image: " + e.getMessage());
 		}
 	}
 
 	// Helper method to convert Enrollment to StudentResponse
 	private StudentResponse toStudentResponse(Enrollment enrollment) {
 		StudentResponse response = new StudentResponse();
-		response.setId(enrollment.getStudent().getId());
-		response.setName(enrollment.getStudent().getName());
-		response.setEmail(enrollment.getStudent().getEmail());
+		if (enrollment.getStudent() != null) {
+			response.setId(enrollment.getStudent().getId());
+			response.setName(enrollment.getStudent().getName());
+			response.setEmail(enrollment.getStudent().getEmail());
+			response.setProfilePictureUrl(enrollment.getStudent().getCloudinaryUrl());
+		}
 		response.setEnrolledDate(enrollment.getEnrollmentDate());
 		response.setStatus(enrollment.getStatus());
 		return response;
@@ -271,6 +317,7 @@ public class CourseController {
 		private String email;
 		private LocalDate enrolledDate;
 		private String status;
+		private String profilePictureUrl;
 
 		// Getters and setters
 		public Long getId() { return id; }
@@ -283,6 +330,8 @@ public class CourseController {
 		public void setEnrolledDate(LocalDate enrolledDate) { this.enrolledDate = enrolledDate; }
 		public String getStatus() { return status; }
 		public void setStatus(String status) { this.status = status; }
+		public String getProfilePictureUrl() { return profilePictureUrl; }
+		public void setProfilePictureUrl(String profilePictureUrl) { this.profilePictureUrl = profilePictureUrl; }
 	}
 
 	// Inner class for enrollment request
